Adjust min speed also

--- a/OsmAnd/res/layout/default_speed_dialog.xml
+++ b/OsmAnd/res/layout/default_speed_dialog.xml
@@ -16,15 +16,16 @@
 			android:layout_height="wrap_content"
 			android:orientation="vertical"
 			android:paddingLeft="@dimen/content_padding"
+			android:paddingRight="@dimen/content_padding"
 			android:paddingTop="@dimen/content_padding"
-			android:paddingRight="@dimen/content_padding">
+			android:paddingBottom="@dimen/content_padding_half">
 
 			<net.osmand.plus.widgets.TextViewEx
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:paddingStart="@dimen/content_padding_small"
 				android:paddingLeft="@dimen/content_padding_small"
-				android:text="@string/minmax_speed_dialog_title"
+				android:text="@string/default_speed_setting_title"
 				android:textColor="?android:textColorPrimary"
 				app:typeface="@string/font_roboto_medium"
 				android:textSize="@dimen/default_list_text_size_large" />
@@ -35,91 +36,14 @@
 				android:paddingTop="@dimen/content_padding_half"
 				android:paddingStart="@dimen/content_padding_small"
 				android:paddingLeft="@dimen/content_padding_small"
-				android:paddingBottom="@dimen/content_padding_half"
+				android:paddingBottom="@dimen/content_padding"
 				android:text="@string/default_speed_dialog_msg"
 				android:textColor="?android:textColorSecondary"
 				android:textSize="@dimen/default_list_text_size" />
 
-			<LinearLayout
-				android:id="@+id/min_speed_header"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:orientation="horizontal"
-				android:paddingTop="@dimen/content_padding">
-
-				<TextView
-					android:layout_width="0dp"
-					android:layout_height="wrap_content"
-					android:layout_weight="2"
-					android:paddingStart="@dimen/content_padding_small"
-					android:paddingLeft="@dimen/content_padding_small"
-					android:text="@string/shared_string_min_speed"
-					android:textColor="?android:textColorPrimary"
-					android:textSize="@dimen/default_list_text_size" />
-
-				<TextView
-					android:id="@+id/min_speed_text"
-					android:layout_width="0dp"
-					android:layout_height="wrap_content"
-					android:layout_weight="1"
-					android:gravity="end"
-					android:maxLength="3"
-					android:maxLines="1"
-					android:paddingRight="4dp"
-					android:textColor="?android:textColorPrimary"
-					android:textSize="@dimen/default_list_text_size"
-					tools:text="60" />
-
-				<TextView
-					android:id="@+id/min_speed_units"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:paddingEnd="@dimen/content_padding_small"
-					android:paddingRight="@dimen/content_padding_small"
-					android:textColor="?android:textColorSecondary"
-					android:textSize="@dimen/default_list_text_size"
-					tools:text="km/h" />
-			</LinearLayout>
-
-			<LinearLayout
-				android:id="@+id/min_speed_seekbar_lane"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:orientation="horizontal"
-				android:paddingTop="@dimen/content_padding">
-
-				<TextView
-					android:id="@+id/min_speed_seekbar_min_text"
-					android:layout_width="0dp"
-					android:layout_height="wrap_content"
-					android:layout_weight="1"
-					android:gravity="start"
-					android:paddingStart="@dimen/content_padding_small"
-					android:paddingLeft="@dimen/content_padding_small"
-					android:textColor="?android:textColorSecondary"
-					android:textSize="@dimen/default_list_text_size"
-					tools:text="0" />
-
-				<TextView
-					android:id="@+id/min_speed_seekbar_max_text"
-					android:layout_width="0dp"
-					android:layout_height="wrap_content"
-					android:layout_weight="1"
-					android:gravity="end"
-					android:paddingEnd="@dimen/content_padding_small"
-					android:paddingRight="@dimen/content_padding_small"
-					android:textColor="?android:textColorSecondary"
-					android:textSize="@dimen/default_list_text_size"
-					tools:text="100" />
-
-			</LinearLayout>
-
-			<SeekBar
-				android:id="@+id/min_speed_seekbar"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:max="100"
-				android:paddingBottom="@dimen/content_padding" />
+			<include
+				android:id="@+id/min_speed_layout"
+				layout="@layout/adjust_speed_slider" />
 
 		</LinearLayout>
 
@@ -133,89 +57,33 @@
 			android:layout_height="wrap_content"
 			android:orientation="vertical"
 			android:paddingLeft="@dimen/content_padding"
-			android:paddingTop="@dimen/content_padding"
 			android:paddingRight="@dimen/content_padding"
-			android:paddingBottom="@dimen/content_padding">
+			android:paddingTop="@dimen/content_padding"
+			android:paddingBottom="@dimen/content_padding_half">
 
-			<LinearLayout
-				android:id="@+id/max_speed_header"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:orientation="horizontal">
+			<include
+				android:id="@+id/default_speed_layout"
+				layout="@layout/adjust_speed_slider" />
 
-				<TextView
-					android:layout_width="0dp"
-					android:layout_height="wrap_content"
-					android:layout_weight="2"
-					android:paddingStart="@dimen/content_padding_small"
-					android:paddingLeft="@dimen/content_padding_small"
-					android:text="@string/shared_string_max_speed"
-					android:textColor="?android:textColorPrimary"
-					android:textSize="@dimen/default_list_text_size" />
+		</LinearLayout>
 
-				<TextView
-					android:id="@+id/max_speed_text"
-					android:layout_width="0dp"
-					android:layout_height="wrap_content"
-					android:layout_weight="1"
-					android:gravity="end"
-					android:maxLength="3"
-					android:maxLines="1"
-					android:paddingRight="4dp"
-					android:textColor="?android:textColorPrimary"
-					android:textSize="@dimen/default_list_text_size"
-					tools:text="60" />
+		<View
+			android:layout_width="match_parent"
+			android:layout_height="1dp"
+			android:background="?attr/dashboard_divider" />
 
-				<TextView
-					android:id="@+id/max_speed_units"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:paddingEnd="@dimen/content_padding_small"
-					android:paddingRight="@dimen/content_padding_small"
-					android:textColor="?android:textColorSecondary"
-					android:textSize="@dimen/default_list_text_size"
-					tools:text="km/h" />
-			</LinearLayout>
+		<LinearLayout
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:orientation="vertical"
+			android:paddingLeft="@dimen/content_padding"
+			android:paddingRight="@dimen/content_padding"
+			android:paddingTop="@dimen/content_padding"
+			android:paddingBottom="@dimen/content_padding_half">
 
-			<LinearLayout
-				android:id="@+id/max_speed_seekbar_lane"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:orientation="horizontal"
-				android:paddingTop="@dimen/content_padding">
-
-				<TextView
-					android:id="@+id/max_speed_seekbar_min_text"
-					android:layout_width="0dp"
-					android:layout_height="wrap_content"
-					android:layout_weight="1"
-					android:gravity="start"
-					android:paddingStart="@dimen/content_padding_small"
-					android:paddingLeft="@dimen/content_padding_small"
-					android:textColor="?android:textColorSecondary"
-					android:textSize="@dimen/default_list_text_size"
-					tools:text="0" />
-
-				<TextView
-					android:id="@+id/max_speed_seekbar_max_text"
-					android:layout_width="0dp"
-					android:layout_height="wrap_content"
-					android:layout_weight="1"
-					android:gravity="end"
-					android:paddingEnd="@dimen/content_padding_small"
-					android:paddingRight="@dimen/content_padding_small"
-					android:textColor="?android:textColorSecondary"
-					android:textSize="@dimen/default_list_text_size"
-					tools:text="100" />
-
-			</LinearLayout>
-
-			<SeekBar
-				android:id="@+id/max_speed_seekbar"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:max="100"
-				android:paddingBottom="@dimen/content_padding" />
+			<include
+				android:id="@+id/max_speed_layout"
+				layout="@layout/adjust_speed_slider" />
 
 		</LinearLayout>
 
