--- a/OsmAnd/res/xml/navigation_settings.xml
+++ b/OsmAnd/res/xml/navigation_settings.xml
@@ -74,18 +74,20 @@
 
     <PreferenceCategory
         android:key="turn_screen_on"
-        android:layout="@layout/preference_category_summary"
-        android:title="@string/wake_on_voice"
-        android:summary="@string/wake_on_voice_descr">
+        android:title="@string/wake_on_voice">
 
         <ListPreference
-            android:key="wake_on_voice_time_int"
-            android:summary="@string/wake_on_voice_time_descr"
+            android:key="turn_screen_on_time_int"
+            android:summary="@string/turn_screen_on_time_descr"
             android:title="@string/shared_string_time"/>
         <CheckBoxPreference
-            android:key="wake_on_voice_sensor"
-            android:summary="@string/wake_on_voice_sensor_descr"
-            android:title="@string/wake_on_voice_sensor"/>
+            android:key="turn_screen_on_router"
+            android:summary="@string/wake_on_voice_descr"
+            android:title="@string/turn_screen_on_router"/>
+        <CheckBoxPreference
+            android:key="turn_screen_on_sensor"
+            android:summary="@string/turn_screen_on_sensor_descr"
+            android:title="@string/turn_screen_on_sensor"/>
     </PreferenceCategory>
 
     <PreferenceCategory
