--- a/OsmAnd/res/layout/download_item_list_section.xml
+++ b/OsmAnd/res/layout/download_item_list_section.xml
@@ -20,6 +20,7 @@
         android:layout_marginRight="12dp"
         android:layout_weight="1"
         android:maxLines="1"
+        android:textColor="?android:textColorSecondary"
         android:textSize="@dimen/default_desc_text_size"
         osmand:typeface="@string/font_roboto_medium"
         tools:text="World Regions"/>
@@ -33,6 +34,7 @@
         android:maxLines="1"
         android:textSize="@dimen/default_desc_text_size"
         android:visibility="gone"
+        android:textColor="?android:textColorSecondary"
         osmand:typeface="@string/font_roboto_medium"
         tools:text="600Mb"
         tools:visibility="visible"/>
