--- a/OsmAnd/res/layout/preference_activity.xml
+++ b/OsmAnd/res/layout/preference_activity.xml
@@ -79,7 +79,7 @@
 					android:ellipsize="end"
 					android:maxLines="1"
 					android:textAppearance="@style/TextAppearance.ListItemTitle"
-					android:textColor="?attr/main_font_color_basic"
+					android:textColor="?android:textColorPrimary"
 					tools:text="Item Title"/>
 
 				<TextView
@@ -88,9 +88,11 @@
 					android:layout_height="wrap_content"
 					android:ellipsize="end"
 					android:maxLines="1"
+					android:textColor="?android:textColorSecondary"
 					tools:text="Item additional desription"/>
 
 			</LinearLayout>
+
 			<ImageView
 				android:id="@+id/type_down_arrow"
 				android:layout_width="wrap_content"
@@ -105,14 +107,7 @@
 
 	<FrameLayout
 			android:layout_width="match_parent"
-			android:layout_height="match_parent" >
-
-		<ImageView
-			android:id="@+id/selector_shadow"
-			android:layout_width="match_parent"
-			android:layout_height="@dimen/abp__shadow_height"
-			android:src="@drawable/preference_activity_action_bar_shadow"
-			android:visibility="invisible"/>
+			android:layout_height="match_parent">
 
 		<ListView
 				android:id="@android:id/list"
@@ -120,11 +115,20 @@
 				android:layout_height="match_parent" />
 
 		<ImageView
+			android:id="@+id/selector_shadow"
+			android:layout_width="match_parent"
+			android:layout_height="@dimen/abp__shadow_height"
+			android:src="@drawable/preference_activity_action_bar_shadow"
+			android:visibility="gone"
+			tools:ignore="ContentDescription"/>
+
+		<ImageView
 				android:id="@+id/shadowView"
 				android:layout_width="match_parent"
 				android:layout_height="@dimen/abp__shadow_height"
 				android:src="@drawable/preference_activity_action_bar_shadow"
 				tools:ignore="ContentDescription" />
+
 	</FrameLayout>
 
 </LinearLayout>
