--- a/OsmAnd/res/layout/route_info_card.xml
+++ b/OsmAnd/res/layout/route_info_card.xml
@@ -24,7 +24,7 @@
 			android:maxLines="1"
 			android:paddingLeft="@dimen/content_padding"
 			android:paddingRight="@dimen/content_padding"
-			android:textColor="?attr/main_font_color_basic"
+			android:textColor="?android:textColorPrimary"
 			android:textSize="@dimen/default_list_text_size"
 			osmand:typeface="@string/font_roboto_medium"
 			tools:ignore="UnusedAttribute"
